--- a/index.html
+++ b/index.html
@@ -2,10 +2,11 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
-    <title>murdock</title>
+    <title>司机间休系统</title>
+    <link mask="司机间休系统" sizes="any" rel="icon" href="/static/icon.ico">
   </head>
   <body>
-    <div id="app"></div>
+    <div id="app"></divs>
     <!-- built files will be auto injected -->
   </body>
 </html>
